	* Use standard (but small) GTK+ buttons instead of custom "X" symbol.
	* Default binding of Ctrl+Shift+v to 'Paste as Plain Text' in
	  conversation windows. This can be changed in .gtkrc-2.0. For example,
	  Ctrl+v can be bound to 'Paste as Plain Text' by default.
	* Plugins can now handle markup in buddy names by attaching to the signal
	  "drawing-buddy". (Daniele Ricci, Andrea Piccinelli)

	Bonjour:
	* Added support for IPv6. (Thanks to T_X for testing)

	Gadu-Gadu:
	* Updated our bundled libgadu to 1.9.0-rc2 (many thanks to Krzysztof
	  Klinikowski for the work and testing put in here!)
	* Minimum requirement for external libgadu is now also 1.9.0-rc2.

	ICQ:
	* X-Status (Custom ICQ status icon) support.  Since most of the icons
	  available reflect moods, this is labeled "Set Mood" on the Accounts->ICQ
	  Account menu. (Andrew Ivanov, Tomáš Kebert, Yuriy Yevgrafov, and trac
	  users bob007, salieff, and nops)
	* Allow setting and displaying icons between 1x1 and 100x100 pixels.
	  Previously only icons between 48x48 and 52x64 were allowed.

	MSN:
	* Support for version 9 of the MSN protocol has been removed.  This
	  version is no longer supported on the servers.

	XMPP:
	* Direct messages to a specific resource only upon receipt of a message
	  with content (as opposed to a typing notification, etc).  (Thanks to
	  rjoly for testing)
	* When sending data using in-band-bytestreams, interpret the block-size
	  attribute as the size of the BASE64-encoded representation of the data.
	* Validate the hash on incoming BoB data objects (for custom smileys etc.),
	  cache based per JID when the CID is not a valid hash (as specified by the
	  BoB XEP).

	Yahoo:
	* Attempt to better handle transparent proxies interfering with HTTP-based
	  login.
	* Fix handling of P2P packets, thus fixing the loss of some messages.

version 2.6.6 (02/18/2010):
	libpurple:
	* Fix 'make check' on OS X. (David Fang)
	* Fix a quirk in purple_markup_html_to_xhtml that caused some messages